[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "google-flow-downloader"
version = "1.0.0"
description = "Google Flow 图片批量下载工具"
authors = [{name = "Google Flow Tools"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "rich>=13.0.0",
    "click>=8.1.0",
]

[project.scripts]
gflow = "google_flow_downloader.cli:main"

[project.urls]
Homepage = "https://github.com/google-flow-tools/downloader"
