[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "google-flow-downloader"
version = "1.0.0"
description = "Batch download images from Google Flow"
authors = [{name = "Google Flow Tools"}]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["google-flow", "image-downloader", "ai-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "requests>=2.31.0",
    "rich>=13.0.0",
    "click>=8.1.0",
]

[project.scripts]
gflow = "google_flow_downloader.cli:main"

[project.urls]
Homepage = "https://github.com/google-flow-tools/downloader"

[tool.setuptools.packages.find]
where = ["."]
include = ["google_flow_downloader*"]
